# zeta

./: .dockerignore  .drone.yml  .gitignore  .renovaterc.json5  ACTOR_SYSTEM.md  Cargo.toml  Dockerfile  FINAL_PLUGIN_IMPROVEMENTS.md  Makefile  PLUGIN_REFACTOR_SUMMARY.md  PLUGIN_SYSTEM_V2.md  README.md  build.rs  compose.yaml  config.json  config.toml  config.yaml  config.yml  renovate.json  renovate.json5  sonar-project.properties
.github/workflows/: ci.yaml  container-image.yaml  continuous-integration.yaml  release.yaml
dendanskeordbog/: Cargo.toml  README.md
dendanskeordbog/src/: client.rs  error.rs  lib.rs  types.rs
dendanskeordbog/tests/fixtures/queries/: a.html  hest.html
httpeek/: Cargo.toml  README.md
k8s/: deployment.yml
plugin-generator/: Cargo.toml  plugin-lib.rs.in
plugin-generator/resources/: zeta_impl.rs.tmpl
plugin-generator/src/: error.rs  main.rs  plugin.rs
plugins/: Cargo.toml
plugins/google-search/: Plugin.toml
plugins/google-search/src/: lib.rs
plugins/src/: google_search.rs  lib.rs
reddit/: Cargo.toml
reddit/src/: client.rs  error.rs  lib.rs
src/: config.rs  error.rs  lib.rs  main.rs  plugin.rs  route.rs  server.rs  tracing.rs  zeta.rs
src/plugin/: choices.rs  health.rs
src/plugins/: google_search.rs  mod.rs
stub/darwin-libproc/: Cargo.toml
zeta/: Cargo.toml
zeta-core/: Cargo.toml  build.rs
zeta-core/src/: channel.rs  config.rs  connection.rs  error.rs  lib.rs  user.rs
zeta-derive/: Cargo.toml
zeta-derive/src/: lib.rs
zeta-irc/: Cargo.toml
zeta-irc/src/: client.rs  error.rs  frame.rs  lib.rs
zeta-irc/tests/: message_tags.rs  parser.rs
zeta-plugin/: Cargo.toml
zeta-plugin/src/: error.rs  lib.rs  plugin.rs  types.rs
zeta-plugins/: Cargo.toml
zeta-plugins/src/: google_search.rs  lib.rs  plugin.rs
zeta-runtime/: Cargo.toml
zeta-runtime/src/: lib.rs  util.rs
zeta/src/: cli.rs  command.rs  config.rs  consts.rs  context.rs  database.rs  dns.rs  error.rs  http.rs  lib.rs  main.rs  plugin.rs  tracing.rs  utils.rs  zeta.rs
zeta/src/plugin/: actor_example.rs  auto.rs  calculator.rs  chaturbate.rs  choices.rs  choices_v2.rs  counter.rs  dendanskeordbog.rs  dig.rs  echo.rs  geoip.rs  github.rs  google_images.rs  google_search.rs  health.rs  howlongtobeat.rs  isitopen.rs  kagi.rs  macros.rs  messages.rs  minimal.rs  oauth.rs  openweathermap.rs  pornhub.rs  reddit.rs  rink.rs  rust_playground.rs  simple_echo.rs  spotify.rs  string_utils.rs  thingiverse.rs  tiktok.rs  trustpilot.rs  tvmaze.rs  twitch.rs  typed.rs  typed_examples.rs  typed_messages.rs  urban_dictionary.rs  weather.rs  (+1 more)
zeta/src/plugin/isitopen/: hours.rs  types.rs
zeta/src/plugin/kagi/: client.rs
zeta/src/plugin/reddit/: api.rs  types.rs
zeta/src/plugin/youtube/: api.rs  types.rs  urls.rs
zeta/tests/fixtures/chaturbate/: fiery_redhead.html  milabunny_.html
zeta/tests/fixtures/kagi/: landing.html
zeta/tests/fixtures/reddit/comments/: 1niz1ru.json
