[workspace]
resolver = "3"
members = ["dendanskeordbog", "zeta"]

[workspace.dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"

[profile.release]
lto = true
strip = "debuginfo"
panic = "unwind"
opt-level = "s"
codegen-units = 1
