[package]
name = "zeta-core"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.1", features = ["serde"] }
