[package]
name = "zeta"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "zeta"
path = "src/main.rs"

[dependencies]
argh = "0.1.12"
async-trait = "0.1.83"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
hickory-resolver = { version = "0.25.2", features = ["h3-aws-lc-rs"] }
humantime-serde = "1.1.1"
irc = { version = "1.0.0", default-features = false, features = ["serde", "tls-native", "ctcp", "channel-lists"] }
miette = { version = "7.2.0", features = ["fancy"] }
num-format = "0.4.4"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-resource-detectors = "0.9.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
psutil = "5.4.0"
rand = "0.9.2"
reqwest = { version = "0.12.15", features = ["json"] }
rink-core = { version = "0.8.0", features = ["bundle-files"] }
scraper = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
shlex = "1.3.0"
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "macros", "postgres", "runtime-tokio-native-tls", "time"] }
thiserror = "2.0"
time = { version = "0.3.43", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.31.0", features = ["thiserror"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.4"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "allow"
doc_markdown = "allow"

[dev-dependencies]
wildmatch = "=2.5.0"
